# renpy-story-mapper

./: .gitignore  AGENTS.md  LICENSE  Launch RenPy Story Mapper.cmd  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pull-request-checks.yml
docs/: LOCAL_BROWSER.md  MASTER_PLAN.md  PROJECT_STATE.md
docs/deferred/: M07_M08_LEGACY_AI_SURFACES.md  M12_ROUTE_SOLVER_UI.md
scripts/: m04_canonical_acceptance.py  m04_ui_acceptance.py  m05_ui_acceptance.py  m06_5_browser_acceptance.py  m07_browser_acceptance.py  m08_browser_acceptance.py  m08_non_live_acceptance.py  m09_metadata_acceptance.py  m10_browser_acceptance.py  m10_private_acceptance.py  m10_scale_acceptance.py  m11_browser_acceptance.py  m11_private_acceptance.py  m11_review_evidence.py  m11_scale_acceptance.py  m12_browser_acceptance.py  m12_private_acceptance.py  m12_scale_acceptance.py  m13_browser_acceptance.py  m13_live_acceptance.py  m13_provider_free_acceptance.py  m13_schema_canary.py  m15_browser_acceptance.py  m15_provider_free_acceptance.py  m15_seed_technical_coverage.py  validate.ps1
src/renpy_story_mapper/: __init__.py  __main__.py  ai_story_map.py  analysis_phases.py  bounded_window.py  canonical_graph.py  canonical_graph_contract.py  cli.py  control_flow.py  errors.py  graph.py  importer.py  inspection_projection.py  m07_model.py  m07_workflow.py  m11_correction_service.py  m11_persistence.py  m11_scene_model.py  m11_scene_projection.py  m12_model.py  m12_persistence.py  model.py  (+13 more)
tests/: ingestion_fixtures.py  m15_test_support.py  rpyc_fixture_helper.py  test_graph_canvas.py  test_m03_contract.py  test_m04_contract.py  test_m04_presentation_contract.py  test_m05_complex_fixture_contract.py  test_m05_independent_review.py  test_m05_organization_workflow.py  test_m05_organizer.py  test_m05_story_explorer.py  test_m05_story_explorer_review.py  test_m05_story_layout.py  test_m05_workflow_scale.py  test_m06_5_browser_frontend.py  test_m06_5_independent_review.py  test_m06_5_web_api.py  test_m06_control_flow.py  test_m06_ingestion.py  test_m06_security_review.py  test_m07_acceptance_contracts.py  test_m07_browser_route_map.py  test_m07_cloud_safety.py  test_m07_independent_review.py  test_m07_independent_review_findings.py  test_m07_model.py  test_m07_parallel_organization.py  test_m07_parallel_persistence.py  test_m07_route_map.py  test_m07_web_workflow.py  test_m08_ai_story_map.py  test_m08_bounded_windows.py  test_m08_browser_story_experience.py  test_m08_evaluation.py  test_m08_evidence_ownership.py  test_m08_web_only_product.py  test_m08_web_story_map.py  test_m09_independent_review.py  test_m09_metadata_extraction.py  (+80 more)
(+245 files in other folders)
