[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "renpy-story-mapper"
version = "0.1.0"
description = "Safe, non-executing Ren'Py archive inventory and story control-flow analyzer"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Ren'Py Story Mapper contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
renpy-story-mapper = "renpy_story_mapper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/renpy_story_mapper"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["renpy_story_mapper"]
mypy_path = "src"
